--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <div class="bx bx-menu" id="menu-icon"><span class="animate" style="--i:2;"></span></div>
 
         <nav class="navbar">
-            <a href="#home" class="active">Home</a>
-            <a href="#about">About</a>
+            <a href="#home" class="active">pangil saya alwan</a>
+            <a href="#about">bisa juga lian</a>
             <a href="#education">Education</a>
             <a href="#skills">Skills</a>
             <a href="#contact">Contact</a>
