--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             </p>
 
             <div class="btn-box">
-                <a href="#" class="btn">Hire Me</a>
-                <a href="#" class="btn">Let's Talk</a>
+                <a href="#" class="btn">saya baik</a>
+                <a href="#" class="btn">saya ramah</a>
                 <span class="animate" style="--i:5;"></span>
             </div>
         </div>
