--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </p>
 
             <div class="btn-box btns">
-                <a href="#contact" class="btn">Contact Me</a>
+                <a href="#contact" class="btn">panggil saya alwan</a>
                 <span class="animate scroll" style="--i:5;"></span>
             </div>
         </div>
@@ -92,39 +92,30 @@
 
         <div class="education-row">
             <div class="education-column">
-                <h3 class="title">Education<span class="animate scroll" style="--i:2;"></span></h3>
+                <h3 class="title">pengalaman<span class="animate scroll" style="--i:2;"></span></h3>
 
                 <div class="education-box">
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar'></i> 2017 - 2018</div>
-                            <h3>Master Degree - University</h3>
-                            <p>Lorem ipsum dolor, sit amet consectetur
-                                adipisicing elit. Blanditiis dolorem harum
-                                dolorum debitis. Magni, iste! Perferendis
-                                laborum reprehenderit dolorum totam.</p>
+                            <div class="year"><i class='bx bxs-calendar'></i> 2013 - 2014</div>
+                            <h3>Tk Pertiwi somawangi</h3>
+                            <p>sekolah yang terletak di desa somawangi.</p>
                         </div>
                     </div>
 
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar'></i> 2018 - 2019</div>
-                            <h3>Master Degree - University</h3>
-                            <p>Lorem ipsum dolor, sit amet consectetur
-                                adipisicing elit. Blanditiis dolorem harum
-                                dolorum debitis. Magni, iste! Perferendis
-                                laborum reprehenderit dolorum totam.</p>
+                            <div class="year"><i class='bx bxs-calendar'></i> 2014 - 2020</div>
+                            <h3>SD negeri 2 somawangi</h3>
+                            <p>sekolah yang terletak di desa somawangi masih satu desa dengan tk nya</p>
                         </div>
                     </div>
 
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar'></i> 2019 - 2020</div>
-                            <h3>Master Degree - University</h3>
-                            <p>Lorem ipsum dolor, sit amet consectetur
-                                adipisicing elit. Blanditiis dolorem harum
-                                dolorum debitis. Magni, iste! Perferendis
-                                laborum reprehenderit dolorum totam.</p>
+                            <div class="year"><i class='bx bxs-calendar'></i> 2020 - 2026</div>
+                            <h3>sekarang masih melanjutkan sekolah di SMK PANCA BHKATI RAKIT</h3>
+                            <p>sekolah yang terletak di desa adipasir kecamatan rakit</p>
                         </div>
                     </div>
 
