--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <!-- about section design -->
     <section class="about" id="about">
-        <h2 class="heading">About <span>Me</span><span class="animate scroll" style="--i:1;"></span></h2>
+        <h2 class="heading">aku baik <span>sekali</span><span class="animate scroll" style="--i:1;"></span></h2>
 
         <div class="about-img">
             <img src="images/alwan.jpeg" alt="">
@@ -88,7 +88,7 @@
 
     <!-- education section design -->
     <section class="education" id="education">
-        <h2 class="heading">My <span>Journey</span><span class="animate scroll" style="--i:1;"></span></h2>
+        <h2 class="heading">tentang <span>diriku</span><span class="animate scroll" style="--i:1;"></span></h2>
 
         <div class="education-row">
             <div class="education-column">
@@ -113,9 +113,9 @@
 
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar'></i> 2020 - 2026</div>
-                            <h3>sekarang masih melanjutkan sekolah di SMK PANCA BHKATI RAKIT</h3>
-                            <p>sekolah yang terletak di desa adipasir kecamatan rakit</p>
+                            <div class="year"><i class='bx bxs-calendar'></i> 2020 - 2023</div>
+                            <h3>SMP 3 MANDIRAJA</h3>
+                            <p>sekolah yang terletak di desa kaliwungu kecamatan mandiraja</p>
                         </div>
                     </div>
 
@@ -124,39 +124,30 @@
             </div>
 
             <div class="education-column">
-                <h3 class="title">Experience<span class="animate scroll" style="--i:5;"></span></h3>
+                <h3 class="title">impian ku <span class="animate scroll" style="--i:5;"></span></h3>
 
                 <div class="education-box">
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar'></i> 2017 - 2018</div>
-                            <h3>Web Developer - Company</h3>
-                            <p>Lorem ipsum dolor, sit amet consectetur
-                                adipisicing elit. Blanditiis dolorem harum
-                                dolorum debitis. Magni, iste! Perferendis
-                                laborum reprehenderit dolorum totam.</p>
+                            <div class="year"><i class='bx bxs-calendar'></i></div>
+                            <h3>KONTEN CREATOR</h3>
+                            <p>saya ingin menjadi konten creator tiktok ataupun youtube</p>
                         </div>
                     </div>
 
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar'></i> 2018 - 2019</div>
-                            <h3>Web Developer - Company</h3>
-                            <p>Lorem ipsum dolor, sit amet consectetur
-                                adipisicing elit. Blanditiis dolorem harum
-                                dolorum debitis. Magni, iste! Perferendis
-                                laborum reprehenderit dolorum totam.</p>
+                            <div class="year"><i class='bx bxs-calendar'></i></div>
+                            <h3>MENJADI INVESTOR CRYIPTO</h3>
+                            <p>saya ingin sekali menjadi seorang investot, karena bisa menjadi kaya meski sulit untuk dilakukan</p>
                         </div>
                     </div>
 
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar'></i> 2019 - 2020</div>
-                            <h3>Web Developer - Company</h3>
-                            <p>Lorem ipsum dolor, sit amet consectetur
-                                adipisicing elit. Blanditiis dolorem harum
-                                dolorum debitis. Magni, iste! Perferendis
-                                laborum reprehenderit dolorum totam.</p>
+                            <div class="year"><i class='bx bxs-calendar'></i></div>
+                            <h3>MENJADI PENGUSAHA RENTAL PS</h3>
+                            <p>saya ingin sekali membuka usaha rental PS karena mudah dan lumayan penghasilanya</p>
                         </div>
                     </div>
 
