--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="home-content">
             <h1>Hi, I'm <span>alwan dearliyan </span><span class="animate" style="--i:2;"></span></h1>
             <div class="text-animate">
-                <h3>smk panca bhakti rakit</h3>
+                <h3>smk panca bhakti rakit,saya sebagai pelajar yang baik dan sopan terhadap guru</h3>
                 <span class="animate" style="--i:3;"></span>
             </div>
             <p>saya sekolah di smk panca bhakti rakit
